# thesis-experiments

./: .gitignore  README.md  ad-hoc-analysis.ipynb  aml_requirements.txt  aml_submit_tools.py  aml_tool_select.py  analysis.ipynb  assertive_cue0.jsonl  base.sh  cleaner-analysis.ipynb  cluster-analysis.ipynb  compare_tool_orders.py  conda-env.yaml  copy_improvement_history.py  defend.sh  distribution.ipynb  example_inference.py  llama-assertive-cue-50-no-defense.jsonl  llama-no-attack-50-no-defense.jsonl  llama-undefended-1.jsonl  llama-undefended-4.jsonl  main.py  notes  one-index-qwen-cluster-id-2-revised-prompt.jsonl  one-index-qwen-cluster-id-2.jsonl  one-index-qwen-ollama-improvement_history.jsonl  one-index-qwen-ollama.jsonl  one-index-qwen.jsonl  pyproject.toml  qwen-suffix-attack-no-defense-history.jsonl  qwen-undefended-1.jsonl  qwen-undefended-2.jsonl  qwen-undefended-4.jsonl  requirements.txt  results-history.jsonl  results-improvement_history.jsonl  results.jsonl  robust-attack-history.jsonl  run_batch.sh  run_batch_llama.sh  (+3 more)
Modelfiles/: phi4.Modelfile
commons/: aml_utils.py
configs/: playground_a100.yml
core/: experiment.py  llm_clients.py  tool_modifier.py  utils.py
data/: modifications.json
figures/: ollama_llama_tool_selection_rates.tex  ollama_phi4-mini-tool-prompt_tool_selection_rates.tex  ollama_phi4-mini_tool_selection_rates.tex  ollama_qwen3_tool_selection_rates.tex
first-attacker-runs/: analysis.ipynb
initial_results/: analysis.ipynb
llama-50/: analysis.ipynb  llama-suffix-no-defense-20-history.jsonl  llama-suffix-no-defense-20.jsonl
(+6800 files in other folders)
