[project]
name = "gaming-tool-calls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "azure-identity>=1.24.0",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "vllm>=0.9.2",
]
